; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_a100u2w.c_read_eeprom.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_a100u2w.c_read_eeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.orc_host = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.orc_host*)* @read_eeprom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_eeprom(%struct.orc_host* %0) #0 {
  %2 = alloca %struct.orc_host*, align 8
  store %struct.orc_host* %0, %struct.orc_host** %2, align 8
  %3 = load %struct.orc_host*, %struct.orc_host** %2, align 8
  %4 = call i32 @se2_rd_all(%struct.orc_host* %3)
  %5 = icmp ne i32 %4, 1
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.orc_host*, %struct.orc_host** %2, align 8
  %8 = call i32 @se2_update_all(%struct.orc_host* %7)
  %9 = load %struct.orc_host*, %struct.orc_host** %2, align 8
  %10 = call i32 @se2_rd_all(%struct.orc_host* %9)
  br label %11

11:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @se2_rd_all(%struct.orc_host*) #1

declare dso_local i32 @se2_update_all(%struct.orc_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
